# assignment-1.NasserAlMuaili

./: README.md
install/: local_setup.sh  setup.sh
install/naal3202_hw2/lib/naal3202_hw2/: services_client  services_server
install/naal3202_hw2/share/naal3202_hw2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/naal3202_service/share/naal3202_service/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/naal3202_service/share/naal3202_service/cmake/: ament_cmake_export_libraries-extras.cmake  export_naal3202_service__rosidl_generator_cExport-noconfig.cmake  export_naal3202_service__rosidl_generator_cExport.cmake  export_naal3202_service__rosidl_generator_cppExport.cmake  export_naal3202_service__rosidl_generator_pyExport-noconfig.cmake  export_naal3202_service__rosidl_generator_pyExport.cmake  export_naal3202_service__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_naal3202_service__rosidl_typesupport_fastrtps_cExport.cmake  naal3202_service__rosidl_typesupport_cExport-noconfig.cmake  naal3202_service__rosidl_typesupport_cppExport-noconfig.cmake  naal3202_service__rosidl_typesupport_introspection_cExport.cmake  naal3202_service__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
log/: latest_build
results/: service_latencies.csv
src/naal3202_hw2/: services_server.py  setup.cfg  setup.py
src/naal3202_service/: CMakeLists.txt
(+13 files in other folders)
